[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guessing_game_1"
path = "src/main.rs"

[[bin]]
name = "guessing_game_2"
path = "src/main2.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
